--- a/package.json
+++ b/package.json
@@ -2,9 +2,12 @@
   "name": "template",
   "version": "1.0.0",
   "main": "server.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "build": "npx tailwindcss -i ./public/css/input.css -o ./public/css/output.css --watch",
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
   "keywords": [],
   "author": "",
